gccida/g0/fibheap_extr_min_node
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_extr_min_node/src/fibheap.c:788:1: error: use of undeclared identifier 'fibonacci_heap'
fibonacci_heap<long, basic_block_def>::insert_root( heap, x); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_extr_min_node/src/fibheap.c:788:16: error: expected expression
fibonacci_heap<long, basic_block_def>::insert_root( heap, x); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_extr_min_node/src/fibheap.c:791:1: error: use of undeclared identifier 'fibonacci_heap'
fibonacci_heap<long, basic_block_def>::remove_root( heap, ret); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_extr_min_node/src/fibheap.c:791:16: error: expected expression
fibonacci_heap<long, basic_block_def>::remove_root( heap, ret); 
               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_extr_min_node/src/obj/fibheap.o] Error 1
